# OpenClickNP

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  FINAL_REPORT.md  HTTPS_ACCELERATOR.md  LICENSE  PAPER.md  PLAN.md  README.md
compiler/: CMakeLists.txt
compiler/include/openclicknp/: ast.hpp  be_ir.hpp  diagnostic.hpp  driver.hpp  eg_ir.hpp  lexer.hpp  parser.hpp  passes.hpp  source.hpp
compiler/src/: diagnostic.cpp  driver.cpp  main.cpp  source.cpp
compiler/src/analyses/: autorun.cpp  bandwidth.cpp  cycles.cpp  port_arity.cpp
compiler/src/backends/: body_rewrite.cpp  body_rewrite.hpp
compiler/src/ir/: eg_builder.cpp  lower.cpp  platform.cpp  resolver.cpp
compiler/src/lex/: lexer.cpp
compiler/src/parse/: parser.cpp
examples/: CMakeLists.txt
examples/ACL_TCAM/: CMakeLists.txt  README.md  host.cpp  topology.clnp
examples/AES_Encryption/: CMakeLists.txt  README.md  host.cpp  topology.clnp
examples/AES_Pipeline_4x/: CMakeLists.txt  README.md  host.cpp  topology.clnp
examples/AntiReplay/: CMakeLists.txt  README.md  host.cpp  topology.clnp
examples/DDoSDetect/: CMakeLists.txt  README.md  host.cpp  topology.clnp
examples/DPI_Engine/: CMakeLists.txt  README.md  host.cpp  topology.clnp
examples/DelayScheduler/: CMakeLists.txt  README.md  host.cpp  topology.clnp
examples/DiagnosticTap/: CMakeLists.txt  README.md  host.cpp  topology.clnp
examples/ECMP_Router/: CMakeLists.txt  README.md  host.cpp  topology.clnp
examples/Firewall/: CMakeLists.txt  host.cpp  topology.clnp
examples/FlitTelemetry/: CMakeLists.txt  README.md  host.cpp  topology.clnp
examples/FlowMonitor/: CMakeLists.txt  README.md  host.cpp  topology.clnp
examples/HashSwitcher/: CMakeLists.txt  README.md  host.cpp  topology.clnp
examples/HeaderInspector/: CMakeLists.txt  README.md  host.cpp  topology.clnp
examples/HierarchicalShaper/: CMakeLists.txt  README.md  host.cpp  topology.clnp
examples/IP_Forwarding/: CMakeLists.txt  README.md  host.cpp  topology.clnp
examples/IPsec_ESP/: CMakeLists.txt  README.md  host.cpp  topology.clnp
examples/L4LoadBalancer/: CMakeLists.txt  host.cpp  topology.clnp
examples/LatencyMeter/: CMakeLists.txt  README.md  host.cpp  topology.clnp
examples/LoadBalancer_v2/: CMakeLists.txt  README.md  host.cpp  topology.clnp
examples/LoopbackTester/: CMakeLists.txt  README.md  host.cpp  topology.clnp
examples/NVGRE_Decap/: CMakeLists.txt  README.md  host.cpp  topology.clnp
examples/NVGRE_Encap/: CMakeLists.txt  host.cpp  topology.clnp
examples/NVGRE_Gateway/: CMakeLists.txt  README.md  host.cpp  topology.clnp
examples/PFabric/: CMakeLists.txt  README.md  host.cpp  topology.clnp
examples/PacketCapture/: CMakeLists.txt  README.md  host.cpp  topology.clnp
examples/PacketLogger/: CMakeLists.txt  README.md  host.cpp  topology.clnp
examples/PassTraffic/: CMakeLists.txt  README.md  host.cpp  topology.clnp
examples/PipelineHarness/: CMakeLists.txt  README.md  host.cpp  topology.clnp
examples/PortScanDetect/: CMakeLists.txt  README.md  host.cpp  topology.clnp
examples/RSA_Accelerator/: CMakeLists.txt  README.md  host.cpp  topology.clnp
examples/RandomXorHarness/: CMakeLists.txt  README.md  host.cpp  topology.clnp
examples/RateLimiter/: CMakeLists.txt  README.md  host.cpp  topology.clnp
examples/RoCE_Gateway/: CMakeLists.txt  README.md  host.cpp  topology.clnp
examples/SHA1_Pipeline/: CMakeLists.txt  README.md  host.cpp  topology.clnp
examples/StreamMirror/: CMakeLists.txt  README.md  host.cpp  topology.clnp
examples/StressTester/: CMakeLists.txt  README.md  host.cpp  topology.clnp
examples/SubflowBuffer/: CMakeLists.txt  README.md  host.cpp  topology.clnp
examples/TCPChecksumOffload/: CMakeLists.txt  README.md  host.cpp  topology.clnp
examples/TCP_FlowAnalyzer/: CMakeLists.txt  README.md  host.cpp  topology.clnp
examples/TimestampPipeline/: CMakeLists.txt  README.md  host.cpp  topology.clnp
examples/TrafficGenerator/: CMakeLists.txt  README.md  host.cpp  topology.clnp
examples/TreeAggregator/: CMakeLists.txt  README.md  host.cpp  topology.clnp
examples/VLAN_Bridge/: CMakeLists.txt  README.md  host.cpp  topology.clnp
examples/VLAN_Trunk/: CMakeLists.txt  README.md  host.cpp  topology.clnp
examples/WFQ_Scheduler/: CMakeLists.txt  README.md  host.cpp  topology.clnp
examples/WildcardFirewall/: CMakeLists.txt  README.md  host.cpp  topology.clnp
runtime/: CMakeLists.txt
runtime/include/openclicknp/: aes128.hpp  bigint.hpp  (+8 more)
runtime/src/: counters.cpp  element.cpp  lookups.cpp  pcap.cpp  platform.cpp  signal_rpc.cpp  slot_bridge.hpp  slot_bridge_qdma.cpp  slot_bridge_xdma.cpp
runtime/tests/: CMakeLists.txt  test_functional_sim.cpp  test_pcap_roundtrip.cpp  test_runtime_basic.cpp  test_slot_bridge.cpp
ssl_integration/: CMakeLists.txt  demo_tls.sh  openclicknp_aes_shim.cpp  openclicknp_engine.c  openclicknp_modexp.cpp  test_openssl_engine.c
tests/elements/: CMakeLists.txt  element_test_harness.hpp  test_AES_CTR.cpp  test_AES_Dispatch.cpp  test_AES_ECB.cpp  test_AES_LastFlitMux.cpp  test_AES_Merge.cpp  test_Add2048.cpp  test_AddLatency.cpp  test_AllocResultAdapter.cpp  test_AppendHMAC.cpp  test_Capture.cpp  test_ChannelShaping.cpp  test_CheckSopEop.cpp  test_Clock.cpp  test_Counter.cpp  test_Credit_PktGen.cpp  test_CuckooHash.cpp  test_DelayTester.cpp  test_Demux.cpp  test_Demux2.cpp  test_DropElem.cpp  test_DropEnforcer.cpp  test_Dump.cpp  test_Firewall_5tuple.cpp  test_FixSopEop.cpp  test_FlitCount.cpp  test_FlitDemux.cpp  test_FlitDemuxByMeta.cpp  test_FlitMetaBuffer.cpp  test_FlitMetaMux.cpp  test_FlitMux.cpp  test_FlitMux2RR.cpp  test_FlitScheduler.cpp  test_FlowCache.cpp  test_FlowCounter.cpp  test_FlowTupleParser.cpp  test_FlowTupleTest.cpp  test_Fork.cpp  test_Forwarder.cpp  (+88 more)
tests/integration/: CMakeLists.txt  test_aes_sha_accuracy.cpp  test_e2e_passtraffic.cpp  test_rsa_accuracy.cpp  test_rsa_perf.cpp  test_systemc_pass.cpp  test_systemc_smoke.cpp  test_verilator_smoke.cpp
tests/unit/: CMakeLists.txt  test_analyses.cpp  test_compiler_smoke.cpp  test_lexer.cpp  test_parser.cpp  test_resolver.cpp
(+829 files in other folders)
