# All examples link against openclicknp_runtime.
add_subdirectory(PassTraffic)
add_subdirectory(Firewall)
add_subdirectory(L4LoadBalancer)
add_subdirectory(NVGRE_Encap)
add_subdirectory(NVGRE_Decap)
add_subdirectory(RateLimiter)
add_subdirectory(PortScanDetect)
add_subdirectory(RoCE_Gateway)
add_subdirectory(IP_Forwarding)
add_subdirectory(AES_Encryption)
add_subdirectory(PFabric)
add_subdirectory(PacketCapture)
add_subdirectory(PacketLogger)
add_subdirectory(FlowMonitor)
add_subdirectory(DDoSDetect)
add_subdirectory(VLAN_Bridge)
