# All examples link against openclicknp_runtime.
add_subdirectory(PassTraffic)
add_subdirectory(Firewall)
add_subdirectory(L4LoadBalancer)
add_subdirectory(NVGRE_Encap)
add_subdirectory(NVGRE_Decap)
add_subdirectory(RateLimiter)
add_subdirectory(PortScanDetect)
add_subdirectory(RoCE_Gateway)
add_subdirectory(IP_Forwarding)
add_subdirectory(AES_Encryption)
add_subdirectory(PFabric)
add_subdirectory(PacketCapture)
add_subdirectory(PacketLogger)
add_subdirectory(FlowMonitor)
add_subdirectory(DDoSDetect)
add_subdirectory(VLAN_Bridge)
# Phase-2 real-world applications using the broader element library
add_subdirectory(IPsec_ESP)
add_subdirectory(AES_Pipeline_4x)
add_subdirectory(RSA_Accelerator)
add_subdirectory(DPI_Engine)
add_subdirectory(WFQ_Scheduler)
add_subdirectory(HierarchicalShaper)
add_subdirectory(ACL_TCAM)
add_subdirectory(TCP_FlowAnalyzer)
add_subdirectory(LatencyMeter)
add_subdirectory(TrafficGenerator)
add_subdirectory(HeaderInspector)
add_subdirectory(HashSwitcher)
add_subdirectory(VLAN_Trunk)
add_subdirectory(LoopbackTester)
add_subdirectory(StreamMirror)
add_subdirectory(StressTester)
add_subdirectory(SubflowBuffer)
add_subdirectory(TreeAggregator)
# Phase-3 applications covering the remaining unused elements
add_subdirectory(ECMP_Router)
add_subdirectory(NVGRE_Gateway)
add_subdirectory(WildcardFirewall)
add_subdirectory(PipelineHarness)
add_subdirectory(FlitTelemetry)
add_subdirectory(RandomXorHarness)
add_subdirectory(DelayScheduler)
add_subdirectory(TimestampPipeline)
add_subdirectory(AntiReplay)
add_subdirectory(DiagnosticTap)
add_subdirectory(LoadBalancer_v2)
add_subdirectory(SHA1_Pipeline)
add_subdirectory(TCPChecksumOffload)
